--- a/app/sprinkles/account/templates/pages/resend-verification.html.twig
+++ b/app/sprinkles/account/templates/pages/resend-verification.html.twig
@@ -17,7 +17,7 @@
         </div>
     </div>
     
-    <div class="row register-form">
+    <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
             <form id="request-verification-email" role="form" action="{{site.uri.public}}/account/resend-verification" method="post" class="r-form">
                 <div class="form-group">
