--- a/app/sprinkles/account/templates/pages/set-password.html.twig
+++ b/app/sprinkles/account/templates/pages/set-password.html.twig
@@ -17,7 +17,7 @@
         </div>
     </div>
     
-    <div class="row register-form">
+    <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
             {% include "components/alerts.html.twig" %}
             <form id="set-or-reset-password" role="form" action="{{site.uri.public}}/account/set-password" method="post" class="r-form">
