--- a/app/sprinkles/account/templates/pages/sign-in-or-register.html.twig
+++ b/app/sprinkles/account/templates/pages/sign-in-or-register.html.twig
@@ -40,11 +40,11 @@
                         <input type="text" name="user_name" placeholder="Choose a unique username" class="form-control" id="r-form-username">
                     </div>
                     <div class="row">
-                        <div class="col-sm-6 form-group">
+                        <div class="col-md-6 form-group">
                             <label class="sr-only" for="r-form-first-name">First name</label>
                             <input type="text" name="first_name" placeholder="First name" class="form-control" id="r-form-first-name">
                         </div>
-                        <div class="col-sm-6 form-group">
+                        <div class="col-md-6 form-group">
                             <label class="sr-only" for="r-form-last-name">Last name</label>
                             <input type="text" name="last_name" placeholder="Last name" class="form-control" id="r-form-last-name">
                         </div>
@@ -65,11 +65,11 @@
                         <div class="form-group">
                             <label class="sr-only" for="r-form-passwordc">Verify the captcha</label>
                             <div class="row">
-                                <div class="col-sm-6"> 
-                                    <input type="text" name="captcha" placeholder="Enter the text shown" class="form-control" id="r-form-captcha">
+                                <div class="col-md-6"> 
+                                    <input type="text" name="captcha" placeholder="Enter captcha" class="form-control" id="r-form-captcha">
                                 </div>
-                                <div class="col-sm-6">
-                                    <img src="{{site.uri.public}}/account/captcha" id="captcha" data-target="#r-form-captcha">
+                                <div class="col-md-6 form-col-captcha">
+                                        <img src="{{site.uri.public}}/account/captcha" id="captcha" data-target="#r-form-captcha">
                                 </div>
                             </div>
                         </div>
