--- a/app/sprinkles/account/templates/pages/forgot-password.html.twig
+++ b/app/sprinkles/account/templates/pages/forgot-password.html.twig
@@ -17,7 +17,7 @@
         </div>
     </div>
     
-    <div class="row register-form">
+    <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
             <form id="request-password-reset" role="form" action="{{site.uri.public}}/account/forgot-password" method="post" class="r-form">
                 <div class="form-group">
