--- a/app/sprinkles/account/templates/mail/verify-account.html.twig
+++ b/app/sprinkles/account/templates/mail/verify-account.html.twig
@@ -1,12 +1,12 @@
 {% block subject %}
-    Welcome to {{site.site_title}} - please activate your account
+    Welcome to {{site.title}} - please activate your account
 {% endblock %}
 
 {% block body %}
-<p>Dear {{user.display_name}},
+<p>Dear {{user.first_name}},
 </p>
 <p>
-You are receiving this email because you registered with {{site.site_title}} ({{site.uri.public}}).
+You are receiving this email because you registered with {{site.title}} ({{site.uri.public}}).
 </p>
 <p>
 You will need to activate your account before you can login. Please follow the link below to activate your account.
@@ -16,6 +16,6 @@ You will need to activate your account before you can login. Please follow the l
 </p>
 <p>
 With regards,<br>
-The {{site.site_title}} Team
+The {{site.title}} Team
 </p>
 {% endblock %}
