updating more translation strings

--- a/app/sprinkles/account/templates/pages/sign-in-or-register.html.twig
+++ b/app/sprinkles/account/templates/pages/sign-in-or-register.html.twig
@@ -38,7 +38,7 @@
                     {% include "components/csrf.html.twig" %}
                     <div class="form-group">
                         <label class="sr-only" for="r-form-username">{{translate('USERNAME')}}</label>
-                        <input type="text" name="user_name" placeholder="{{translate('CHOOSE_USERNAME')}}" class="form-control" id="r-form-username">
+                        <input type="text" name="user_name" placeholder="{{translate('USERNAME.CHOOSE')}}" class="form-control" id="r-form-username">
                     </div>
                     <div class="row">
                         <div class="col-md-6 form-group">
