--- a/app/sprinkles/account/templates/mail/verify-account.html.twig
+++ b/app/sprinkles/account/templates/mail/verify-account.html.twig
@@ -1,5 +1,5 @@
 {% block subject %}
-    Welcome to {{site.title}} - please activate your account
+    Welcome to {{site.title}} - please verify your account
 {% endblock %}
 
 {% block body %}
@@ -9,10 +9,10 @@
 You are receiving this email because you registered with {{site.title}} ({{site.uri.public}}).
 </p>
 <p>
-You will need to activate your account before you can login. Please follow the link below to activate your account.
+You will need to verify your account before you can login. Please follow the link below to verify your account.
 </p>
 <p>
-<a href="{{site.uri.public}}/account/activate?secret_token={{user.secret_token}}">{{site.uri.public}}/account/activate?secret_token={{user.secret_token}}</a>
+<a href="{{site.uri.public}}/account/verify?secret_token={{user.secret_token}}">{{site.uri.public}}/account/verify?secret_token={{user.secret_token}}</a>
 </p>
 <p>
 With regards,<br>
