--- a/app/sprinkles/account/templates/pages/account-settings.html.twig
+++ b/app/sprinkles/account/templates/pages/account-settings.html.twig
@@ -1,9 +1,14 @@
 {% extends "layouts/sb-admin-2.html.twig" %}
 
+{% block stylesheets_page %}      
+    <!-- Page-specific CSS asset bundle -->
+    {{ assets.css('css/form-widgets') | raw }}
+{% endblock %}
+
 {# Overrides blocks in head of base template #}
 {% block page_title %}Account Settings{% endblock %}
 
-{% block page_description %}Update your account settings, including email, display name, and password.{% endblock %}
+{% block page_description %}Update your account settings, including email, name, and password.{% endblock %}
 
 {% block body_matter %}
     <div class="row">
@@ -13,45 +18,45 @@
                     <h3 class="panel-title"><i class="fa fa-gear"></i> Account Settings</h3>
                 </div>
                 <div class="panel-body">
+                    <div id="alerts-page">
+    
+                    </div>
                     <form class="form-horizontal" id="account-settings" role="form" action="{{site.uri.public}}/account/settings" method="post">
+                        {% include "components/csrf.html.twig" %}
                         <!-- Prevent browsers from trying to autofill the password field.  See http://stackoverflow.com/a/23234498/2970321 -->
                         <input type="text" style="display:none">
                         <input type="password" style="display:none">
                         
-                        {% if checkAccess('update_account_setting', {('user'): current_user, ('property'): 'email'}) %}
                         <div class="form-group">
-                            <label for="input-email" class="col-sm-4 control-label">Email Address</label>
+                            <label for="input-email" class="col-sm-4 control-label">{{translate("EMAIL")}}</label>
                             <div class="col-sm-8">
-                                <input type="text" id="input-email" class="form-control" name="email" value="{{current_user.email}}" placeholder="Email address">
+                                <input type="text" id="input-email" class="form-control" name="email" value="{{current_user.email}}" autocomplete="off" placeholder="{{translate("EMAIL")}}">
                                 <p class="help-block">Your email address.</p>
                             </div>
                         </div>
-                        {% endif %}
-                        {% if checkAccess('update_account_setting', {('user'): current_user, ('property'): 'name'}) %}
+                        
                         <div class="form-group">
                             <label for="input-first-name" class="col-sm-4 control-label">Name</label>
                             <div class="col-sm-4">
-                                <input type="text" id="input-first-name" class="form-control" name="first_name" value="{{current_user.first_name}}" placeholder="First">
+                                <input type="text" id="input-first-name" class="form-control" name="first_name" value="{{current_user.first_name}}" placeholder="{{translate("FIRST_NAME")}}">
                             </div>
                             <div class="col-sm-4">
-                                <input type="text" id="input-last-name" class="form-control" name="last_name" value="{{current_user.last_name}}" placeholder="Last">
+                                <input type="text" id="input-last-name" class="form-control" name="last_name" value="{{current_user.last_name}}" placeholder="{{translate("LAST_NAME")}}">
                             </div>                            
                         </div>
-                        {% endif %}
-                        {% if checkAccess('update_account_setting', {('user'): current_user, ('property'): 'locale'}) %}
+                        
                         <div class="form-group">
-                            <label for="input-locale" class="col-sm-4 control-label">Locale</label>
+                            <label for="input-locale" class="col-sm-4 control-label">{{translate("LOCALE")}}</label>
                             <div class="col-sm-8">
                                 <select id="input-locale" class="form-control select2" name="locale">
-                                    {% for option, label in locales %}
-                                    <option value="{{option}}" {% if (option == current_user.locale) %}selected{% endif %}>{{label}}</option>
+                                    {% for id, option in page.locales %}
+                                    <option value="{{option}}" {% if (option == current_user.locale) %}selected{% endif %}>{{option}}</option>
                                     {% endfor %}
                                 </select>
                                 <p class="help-block">The language and locale to use for your account.</p>
                             </div>
                         </div>
-                        {% endif %}
-                        {% if checkAccess('update_account_setting', {('user'): current_user, ('property'): 'password'}) %}
+                        
                         <div class="form-group">
                             <label for="input-password" class="col-sm-4 control-label">New Password</label>
                             <div class="col-sm-8">
@@ -66,7 +71,6 @@
                                 <p class="help-block">Required only if selecting a new password.</p>
                             </div>
                         </div>
-                        {% endif %}
                         <div class="form-group">
                             <label for="input-passwordcheck" class="col-sm-4 control-label">Current Password</label>
                             <div class="col-sm-8">
@@ -87,7 +91,10 @@
     <script>
     {% include "components/validators.js.twig" %}
     </script>
-    
+
+    <!-- Include form widgets JS -->
+    {{ assets.js('js/form-widgets') | raw }}
+
     <!-- Include page-specific JS -->
     {{ assets.js('js/pages/account-settings') | raw }}
 {% endblock %}
