forgot password link email route

--- a/app/sprinkles/account/templates/mail/password-reset.html.twig
+++ b/app/sprinkles/account/templates/mail/password-reset.html.twig
@@ -1,12 +1,12 @@
 {% block subject %}
-    {{site.site_title}} - your password reset request
+    {{site.title}} - your password reset request
 {% endblock %}
 
 {% block body %}
-<p>Dear {{user.display_name}},
+<p>Dear {{user.first_name}},
 </p>
 <p>
-A lost password request has been submitted for your account with {{site.site_title}} ({{site.uri.public}}) on {{request_date}}.
+A lost password request has been submitted for your account with {{site.title}} ({{site.uri.public}}) on {{request_date | date('m/d/Y g:i A')}}.
 </p>
 <p>
 If you or someone you trust sent this request, and you wish to set a new password, please click this link: <a href="{{site.uri.public}}/account/reset-password?secret_token={{user.secret_token}}&confirm=true">{{site.uri.public}}/account/reset-password?secret_token={{user.secret_token}}&confirm=true</a>
@@ -17,6 +17,6 @@ If you did <b>not</b> expect this email, you may click this link to cancel the r
 </p>
 <p>
 With regards,<br>
-The {{site.site_title}} Team
+The {{site.title}} Team
 </p>
 {% endblock %}
