--- a/app/sprinkles/account/templates/pages/forgot-password.html.twig
+++ b/app/sprinkles/account/templates/pages/forgot-password.html.twig
@@ -19,7 +19,11 @@
     
     <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
+            <div id="alerts-page">
+
+            </div>        
             <form id="request-password-reset" role="form" action="{{site.uri.public}}/account/forgot-password" method="post" class="r-form">
+                {% include "components/csrf.html.twig" %}
                 <div class="form-group">
                     <label class="sr-only" for="reset-form-email">Email</label>
                     <input type="text" name="email" placeholder="Please enter the email address you used to sign up" class="form-control" id="reset-form-email">
